- libgwyprocess: added Delaunay triangulation from Ross Hemsley
- libgwyprocess: added calibration data structures 
- libgwyprocess: added statistical functions for calculating uncertainties
  from calibration data

Modules:
- WSF file (new): Imports WSF SPM data.
- MIF (new): Import of DME MIF files v1.7 (just topography).
- Nanonis: Can open files containing a multipass configuration table.
- Calibration: Load from text file: enables loading complex calibration data.
- Calibration: Create: enables defining simple calibration data for 3 axes.
- Calibration: View: select, view and apply calibration for specific SPM data.
- Calibration: Simple error map: create simple calibration entry from grating
  measurement.
- Profile: Modified to display calibration data if present.
- Read value: Modified to display calibration data if present.
- Statistics: Modified to display calibration data if present.
- Statistical functions: Modified to display calibration data if present.

Other:
- Compilation with MSVC6 toolchain on MS Windows is no longer supported, use
  MinGW32.  The recommended compilation method is cross-compilation on Linux.
- Building of RPMs should work on any sufficiently RedHat-based distribution,
  not just Fedora.


2.22 (2010-12-06)
Application:
- Translations updated: Czech, French, Russian.
- New command line option --no-log-to-file disables redirection of messages
  to a log file (usefuly namely on Win32).
- Gwyddion tries to initialise thread support as the very first thing if it
  finds to be running with GLib 2.24 or newer.

Libraries:
- libgwyprocess: Odd behaviour of 1D convolution and Gaussian filters for
  kernels much larger than data were corrected to full mirroring.
- libgwyprocess: New grain quantities related to curvature were added.
- libgwyddion: Portable isinf and insnan (gwy_isinf() and gwy_isnan()) were
  added.
- libgwyddion: gwy_math_curvature() calculating curvature parameters from a